# Alertobot2

./: Cargo.toml  README.md  alertobot.service
src/: config.rs  event_loop.rs  main.rs  rule.rs  test.rs  twitter.rs
src/config/: telegram.rs  twitter.rs
